--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 									<h2>About Myself</h2>
 								</header>
 								<p>
-									My research interest lies in the intersection of Machine Learning, Health, and Neuroscience. 
-									Body movement has fascinated me since I started dancing. Learning about the brain controlling motor actions has led to a general curiosity about the nervous system, its function, and pathological aberrations. 
+									My research interest lies in the intersection of machine learning, medicine, and neuroscience. 
+									Body movement has fascinated me since I started dancing. Learning about the brain's motor control system has led to a general curiosity about the nervous system, its function, and pathological aberrations. 
 									Clinical practice and research in psychiatry and neuroscience are currently advancing into a data-driven and objective approach by means of advanced methodology. 
 									My goal is to contribute to this advance through research in computational neuroscience/medicine. 
 									<br><br>
@@ -57,17 +57,17 @@
 								<p>
 									<h3 align="center">Why computational neuroscience/medicine?</h3>
 									Currently, diagnosis and treatment selection especially in psychiatry rely on self-report and subjective decisions made by physicians. 
-								        Augmenting their decision process by means of Machine Learning could largely fasten and objectify this process. 
-									Visualizing medical data in a human comprehensible way or providing propositions and related uncertainties are possible augmentations. 
-									An automatic, data-driven assessment of a patient’s health status can considerably alleviate the workload of physicians, enable early disease detection and extract meaningful insights from the abundance of the medical data available.
+								        Augmenting their decision process by means of machine learning could largely fasten and objectify this process. 
+									Visualizing medical data in a human comprehensible way or providing diagnoses and related uncertainties are possible augmentations. 
+									An automatic, data-driven assessment of a patient’s health status can considerably alleviate the workload of physicians, enable early disease detection, and extract meaningful insights from the abundance of the medical data available.
 								</p>
 								<p>
 									<h3 align="center">Outside of Academia</h3>
 									<p style="float: left; padding-right: 50px"><img src="images/ballet.jpg" height="250px" width="200px" alt=""> <br><font size="-1">photo by Knut Reimann</font></p>
-									I have been dancing ballet since the age of 8. What started as a fun freetime activity has become a huge part of my life.
-									Most of my freetime I like to spend with dancing in some way. Be it through taking dance classes, watching videos
+									I have been dancing ballet since the age of 8. What started as a fun free time activity has become a huge part of my life.
+									Most of my freetime I like to spend with dance; be it through taking dance classes, watching videos
 									on youtube, or reading about the anatomy of dance.
-									Memorizing choreographies, improving my technique, and really exhausting myself are things I enjoy about ballet classes.
+									Improving my technique and artistry, memorizing choreographies, and challenging myself physically and mentally are things I enjoy about ballet classes.
 								</p>
 
 							</article>
@@ -79,50 +79,58 @@
 								</header>
 								<p>
 									<b>M. Sc. in Cognitive Science (focusing on Machine Learning, Computational Psychiatry/Neuroscience)</b> <br>
-									I am currently pursuing my Master's degree in Cognitive Science at the University of Tuebingen. 
-									My goal is to improve my methodological skills through courses about ML, Statistics, and Data Literacy.
-									Seminars on Computational Psychiatry and deep learning for medicine have influenced my research interests the most.
+									I am currently pursuing my master's degree in Cognitive Science at the University of Tübingen. 
+									My goal is to improve my methodological skills through courses on machine learning, statistics, and data science.
+									Applying advanced methodology to research neurological diseases is my main field of interest.
+									Seminars on computational psychiatry and deep learning for medicine have thus been highlights of my studies.
 								</p>
 								<p>
 									<b>B. Sc. in Cognitive Science</b> <br>
-									Throughout my studies at the University of Osnabrück I was introduced to the different fields in Cognitive Science.
-									I gained solid knowledge and skills in a broad range of fields with a special focus on Neuroinformatics, Mathematics, Computer Science, Neuropsychology, and Neurobiology.
+									Throughout my studies at the University of Osnabrück I was introduced to the different aspects of cognitive science research.
+									Introductory courses in each field separately provided basic knowledge and skills of this interdisciplinary field.
+									I was especially interested in neuropsychology, neurobiology and neuroinformatics, and visited advanced courses in these fields.
+									As I wanted to acquire a solid foundation in methodology, I put a special focus on mathematics and computer science.
 								</p>
 							</article>
 						<!-- Research-->
 							<article id="research" class="panel">
 								<header>
-									<h2 align="center">Research Projects</h2>
+									<h2>Research Projects</h2>
 								</header>
 								<div>
 									<p>
-										<h3 align="center">Neuronal Intelligence Lab</h3><br>
-										I am currently writing my Master's Thesis at the Neuronal Intelligence lab under the supervision of Fabian Sinz.
+										<h3 align="center">Master's Thesis at Neuronal Intelligence lab</h3><br>
+										I am currently writing my master's thesis at the Neuronal Intelligence lab under the supervision of Fabian Sinz.
 										My main thesis objective is to model the trajectories of cognitive and motor aging in healthy elderly.
 										By understanding the influence of risk factors from various domains (genetics, lifestyle, neuropathology, metabolism) 
-										on the trajectories, an earlier diagnosis and a targeted treatment of pathological aging (Alzheimer’s or Parkinson’s disease) could be achieved.
+										on the trajectories, an earlier diagnosis and a targeted treatment of pathological aging could be achieved.
 										In neurodegenerative diseases, the neurophysiological changes precede the clinical symptoms by several years, thus an early diagnosis and treatment is of high importance.
-										Longitudinal data of healthy elderly with and without prodromal markers including genetic, metabolic, lifestyle, biomarker and medical health record data will be analyzed 
-										using baseline models like linear mixed effect models and advanced Bayesian modeling.<br><br>
+										Longitudinal data of healthy elderly with and without prodromal markers including genetic, biological, lifestyle, and behavioural data will be analyzed 
+										using baseline models, like generalized linear mixed effect models, and advanced Bayesian modeling.<br><br>
 										<a href="https://sinzlab.org/">Lab Website</a>
 									</p>
 								</div>
 								<div>
 									<p>
-										<h3 align="center">Neuroscience of Motivation, Action, and Desire Laboratory</h3><br>
+										<h3 align="center">Internship at Neuroscience of Motivation, Action, and Desire Laboratory</h3><br>
 										During my laboratory internship at NeuroMADLAB, I analyzed the reliability of functional connectivity biomarkers for Major Depressive Disorder in a multi-site dataset.
-										In this mega-analysis I investigate the functional connectivity aberrations within and between large-scale brain networks in MDD using group-level models and supervised learning.
-										Working with fMRI data and a dataset from multiple sources, I gained insights in research practices and put my theoretical knowledge to practice.<br><br>
+										Inconsistent findings of fMRI studies in the search of FC biomarkers highlight the need for large-scale, multi-site analyses which reveal a consistent picture of
+										the disease pathology by investigating site effects and other sources of heterogeneity.
+										In this mega-analysis, the functional connectivity aberrations within and between large-scale brain networks in MDD are explored using group-level analysis and supervised learning.
+										By using cross-site validation and providing a similarity measure of the group differences between sites, the problems with small sample size studies are highlighted.
+										Working with fMRI data and a dataset from multiple sources, I put my theoretical knowledge to practice, learned to handle messy data, and got insights into research practices.<br><br>
 										<a href="https://neuromadlab.com/de/">Lab Website</a>
 									</p>
 								</div>
 								<div>
 									<p>
 										<h3 align="center">Bachelor's Thesis</h3><br>
-										Through my Bachelor's Thesis I was able to I gain hands-on experience about the power of Machine Learning tools in the field of EEG-based Brain-Computer-Interfaces.
-										I investigated whether EEG data acquired with the Traumschreiber, a portable hightech sleep mask, is appropriate for traditional and single-trial analysis needed for BCIs.
+										I investigated whether EEG data acquired with the Traumschreiber, a portable high-tech sleep mask, is appropriate for traditional and single-trial analysis.
+										Within this project I designed, programmed, conducted, and analyzed an EEG study. The main result is that established standards in EEG research, like the reference placement should
+										be revisited for BCI applications. Breaking with those standards can in fact result in new solutions for BCI challenges, as I showed by proposing a new method to increase the
+										sample size per participant without increasing the number of trials.
 										<br><br>
-										<a href="documents/shortBSc.pdf">Short Summary of my Bachelor's Thesis</a><br><br>
+										<a href="documents/shortBScThesis.pdf">Short Summary of my Bachelor's Thesis</a><br><br>
 									</p>
 								</div>
 							</article>
@@ -142,7 +150,7 @@
 				<!-- Footer -->
 					<div id="footer">
 						<ul class="copyright">
-							<li>&copy; ASchalkamp</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; 2020 Ann-Kathrin Schalkamp</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</div>
 
