--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 							<article id="me" class="panel intro">
 								<header>
 									<h1>Ann-Kathrin Schalkamp</h1>
-									<p>M. Sc. Candidate in Cognitive Science</p>
+									<p>M.Sc. Candidate in Cognitive Science</p>
 								</header>
 								<a href="#about" class="jumplink pic">
 									<!--<span class="arrow icon fa-chevron-right"><span>See my work</span></span>-->
@@ -44,19 +44,20 @@
 						<!-- About -->
 							<article id="about" class="panel">
 								<header>
-									<h2>About Myself</h2>
+									<h2>About Me</h2>
 								</header>
 								<p>
 									My research interest lies in the intersection of machine learning, medicine, and neuroscience. 
 									Body movement has fascinated me since I started dancing. Learning about the brain's motor control system has led to a general curiosity about the nervous system, its function, and pathological aberrations. 
-									Clinical practice and research in psychiatry and neuroscience are currently advancing into a data-driven and objective approach by means of advanced methodology. 
-									My goal is to contribute to this advance through research in computational neuroscience/medicine. 
+									The underlying cause of many neurological and psychiatric diseases is still unknown making, targeted treatment difficult. To tackle this challenge, data-driven approaches are taken to revolutionize
+									the diagnosis and treatment of such diseases. Advanced methodology is needed to make sense of the abundance of multi-modal data needed to investigate such complex diseases.
+									My goal is to contribute to this advancement through research in computational neuroscience/medicine. 
 									<br><br>
 									<a href="documents/CV.pdf">Curriculum Vitae</a> (Updated May 2020)<br><br>
 								</p>
 								<p>
 									<h3 align="center">Why computational neuroscience/medicine?</h3>
-									Currently, diagnosis and treatment selection especially in psychiatry rely on self-report and subjective decisions made by physicians. 
+									Currently, diagnosis and treatment selection, especially in psychiatry, rely on self-report and subjective decisions made by physicians. 
 								        Augmenting their decision process by means of machine learning could largely fasten and objectify this process. 
 									Visualizing medical data in a human comprehensible way or providing diagnoses and related uncertainties are possible augmentations. 
 									An automatic, data-driven assessment of a patient’s health status can considerably alleviate the workload of physicians, enable early disease detection, and extract meaningful insights from the abundance of the medical data available.
@@ -65,7 +66,7 @@
 									<h3 align="center">Outside of Academia</h3>
 									<p style="float: left; padding-right: 50px"><img src="images/ballet.jpg" height="250px" width="200px" alt=""> <br><font size="-1">photo by Knut Reimann</font></p>
 									I have been dancing ballet since the age of 8. What started as a fun free time activity has become a huge part of my life.
-									Most of my freetime I like to spend with dance; be it through taking dance classes, watching videos
+									Most of my free time I like to spend with dance; be it through taking dance classes, watching videos
 									on youtube, or reading about the anatomy of dance.
 									Improving my technique and artistry, memorizing choreographies, and challenging myself physically and mentally are things I enjoy about ballet classes.
 								</p>
@@ -78,14 +79,14 @@
 									<h2>Educational Background</h2>
 								</header>
 								<p>
-									<b>M. Sc. in Cognitive Science (focusing on Machine Learning, Computational Psychiatry/Neuroscience)</b> <br>
+									<b>M.Sc. in Cognitive Science (focusing on Machine Learning, Computational Psychiatry/Neuroscience)</b> <br>
 									I am currently pursuing my master's degree in Cognitive Science at the University of Tübingen. 
 									My goal is to improve my methodological skills through courses on machine learning, statistics, and data science.
 									Applying advanced methodology to research neurological diseases is my main field of interest.
 									Seminars on computational psychiatry and deep learning for medicine have thus been highlights of my studies.
 								</p>
 								<p>
-									<b>B. Sc. in Cognitive Science</b> <br>
+									<b>B.Sc. in Cognitive Science</b> <br>
 									Throughout my studies at the University of Osnabrück I was introduced to the different aspects of cognitive science research.
 									Introductory courses in each field separately provided basic knowledge and skills of this interdisciplinary field.
 									I was especially interested in neuropsychology, neurobiology and neuroinformatics, and visited advanced courses in these fields.
@@ -115,7 +116,7 @@
 										<h3 align="center">Internship at Neuroscience of Motivation, Action, and Desire Laboratory</h3><br>
 										During my laboratory internship at NeuroMADLAB, I analyzed the reliability of functional connectivity biomarkers for Major Depressive Disorder in a multi-site dataset.
 										Inconsistent findings of fMRI studies in the search of FC biomarkers highlight the need for large-scale, multi-site analyses which reveal a consistent picture of
-										the disease pathology by investigating site effects and other sources of heterogeneity.
+										the disease pathology by investigating sources of site heterogeneity as the scanner type or the scanning protocol.
 										In this mega-analysis, the functional connectivity aberrations within and between large-scale brain networks in MDD are explored using group-level analysis and supervised learning.
 										By using cross-site validation and providing a similarity measure of the group differences between sites, the problems with small sample size studies are highlighted.
 										Working with fMRI data and a dataset from multiple sources, I put my theoretical knowledge to practice, learned to handle messy data, and got insights into research practices.<br><br>
@@ -126,7 +127,7 @@
 									<p>
 										<h3 align="center">Bachelor's Thesis</h3><br>
 										I investigated whether EEG data acquired with the Traumschreiber, a portable high-tech sleep mask, is appropriate for traditional and single-trial analysis.
-										Within this project I designed, programmed, conducted, and analyzed an EEG study. The main result is that established standards in EEG research, like the reference placement should
+										Within this project I designed, programmed, conducted, and analyzed an EEG study. The main result is that established standards in EEG research, like the reference placement, should
 										be revisited for BCI applications. Breaking with those standards can in fact result in new solutions for BCI challenges, as I showed by proposing a new method to increase the
 										sample size per participant without increasing the number of trials.
 										<br><br>
@@ -140,7 +141,7 @@
 									<h2 align="center">Contact Me</h2>
 								</header>
 								<p align="center">
-									<span class="icon fa-paper-plane"></span> <a href="mailto:ann-kathrin.schalkamp@student.uni-tuebingen.com">ann-kathrin.schalkamp@student.uni-tuebingen.com</a>
+									<span class="icon solid fa-envelope-open"></span> <a href="mailto:ann-kathrin.schalkamp@student.uni-tuebingen.com">ann-kathrin.schalkamp@student.uni-tuebingen.com</a>
 									<span class="icon brands fa-github"></span> <a href="https://github.com/aschalkamp">aschalkamp</a> <br>
 									<span class="icon brands fa-linkedin"></span> <a href="https://www.linkedin.com/in/ann-kathrin-schalkamp-3501b21a7/">Ann-Kathrin Schalkamp</a>
 									<span class="icon brands fa-twitter"></span> <a href="https://twitter.com/ASchalkamp">@ASchalkamp</a>
