--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 									My research interest lies in the intersection of machine learning, medicine, and neuroscience. 
 									Body movement has fascinated me since I started dancing. Learning about the brain's motor control system has led to a general curiosity about the nervous system, its function, and pathological aberrations. 
 									The underlying cause of many neurological and psychiatric diseases is still unknown making, targeted treatment difficult. To tackle this challenge, data-driven approaches are taken to revolutionize
-									the diagnosis and treatment of such diseases. Advanced methodology is needed to make sense of the abundance of multi-modal data needed to investigate such complex diseases.
+									the diagnosis and treatment of such diseases. Advanced methodology is required to make sense of the abundance of multi-modal data needed to investigate such complex diseases.
 									My goal is to contribute to this advancement through research in computational neuroscience/medicine. 
 									<br><br>
 									<a href="documents/CV.pdf">Curriculum Vitae</a> (Updated May 2020)<br><br>
