Update CV, spelling

--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
 								<p>
 									My research interest lies in the intersection of machine learning, medicine, and neuroscience. 
 									Body movement has fascinated me since I started dancing. Learning about the brain's motor control system has led to a general curiosity about the nervous system, its function, and pathological aberrations. 
-									The underlying cause of many neurological and psychiatric diseases is still unknown making, targeted treatment difficult. To tackle this challenge, data-driven approaches are taken to revolutionize
+									The underlying cause of many neurological and psychiatric diseases is still unknown making targeted treatment difficult. To tackle this challenge, data-driven approaches are taken to revolutionize
 									the diagnosis and treatment of such diseases. Advanced methodology is required to make sense of the abundance of multi-modal data needed to investigate such complex diseases.
 									My goal is to contribute to this advancement through research in computational neuroscience/medicine. 
 									<br><br>
-									<a href="documents/CV.pdf">Curriculum Vitae</a> (Updated May 2020)<br><br>
+									<a href="documents/CV.pdf">Curriculum Vitae</a> (Updated August 2020)<br><br>
 								</p>
 								<p>
 									<h3 align="center">Why computational neuroscience/medicine?</h3>
@@ -66,8 +66,7 @@
 									<h3 align="center">Outside of Academia</h3>
 									<p style="float: left; padding-right: 50px"><img src="images/ballet.jpg" height="250px" width="200px" alt=""> <br><font size="-1">photo by Knut Reimann</font></p>
 									I have been dancing ballet since the age of 8. What started as a fun free time activity has become a huge part of my life.
-									Most of my free time I like to spend with dance; be it through taking dance classes, watching videos
-									on youtube, or reading about the anatomy of dance.
+									Most of my free time I like to spend with dance; be it through taking dance classes, watching videos, or reading about the anatomy of dance.
 									Improving my technique and artistry, memorizing choreographies, and challenging myself physically and mentally are things I enjoy about ballet classes.
 								</p>
 
@@ -89,7 +88,7 @@
 									<b>B.Sc. in Cognitive Science</b> <br>
 									Throughout my studies at the University of Osnabrück I was introduced to the different aspects of cognitive science research.
 									Introductory courses in each field separately provided basic knowledge and skills of this interdisciplinary field.
-									I was especially interested in neuropsychology, neurobiology and neuroinformatics, and visited advanced courses in these fields.
+									I was especially interested in neuropsychology, neurobiology and neuroinformatics, and visited advanced courses on these subjects.
 									As I wanted to acquire a solid foundation in methodology, I put a special focus on mathematics and computer science.
 								</p>
 							</article>
@@ -103,11 +102,11 @@
 										<h3 align="center">Master's Thesis at Neuronal Intelligence lab</h3><br>
 										I am currently writing my master's thesis at the Neuronal Intelligence lab under the supervision of Fabian Sinz.
 										My main thesis objective is to model the trajectories of cognitive and motor aging in healthy elderly.
-										By understanding the influence of risk factors from various domains (genetics, lifestyle, neuropathology, metabolism) 
+										By understanding the influence of risk factors from various domains (genetics, lifestyle, neuropathology, demographics) 
 										on the trajectories, an earlier diagnosis and a targeted treatment of pathological aging could be achieved.
 										In neurodegenerative diseases, the neurophysiological changes precede the clinical symptoms by several years, thus an early diagnosis and treatment is of high importance.
-										Longitudinal data of healthy elderly with and without prodromal markers including genetic, biological, lifestyle, and behavioural data will be analyzed 
-										using baseline models, like generalized linear mixed effect models, and advanced Bayesian modeling.<br><br>
+										Longitudinal data of healthy elderly with and without prodromal markers including genetic, biological, and lifestyle data will be analyzed 
+										using baseline models, like generalized linear mixed effect models, and advanced Bayesian reduced rank modeling.<br><br>
 										<a href="https://sinzlab.org/">Lab Website</a>
 									</p>
 								</div>
