Add PhD position

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 							<article id="me" class="panel intro">
 								<header>
 									<h1>Ann-Kathrin Schalkamp</h1>
-									<p>M.Sc. Candidate in Cognitive Science</p>
+									<p>PhD Candidate in Bioinformatics</p>
 								</header>
 								<a href="#about" class="jumplink pic">
 									<!--<span class="arrow icon fa-chevron-right"><span>See my work</span></span>-->
@@ -78,11 +78,15 @@
 									<h2>Educational Background</h2>
 								</header>
 								<p>
-									<b>M.Sc. in Cognitive Science (focusing on Machine Learning, Computational Psychiatry/Neuroscience)</b> <br>
-									I am currently pursuing my master's degree in Cognitive Science at the University of Tübingen. 
-									My goal is to improve my methodological skills through courses on machine learning, statistics, and data science.
-									Applying advanced methodology to research neurological diseases is my main field of interest.
-									Seminars on computational psychiatry and deep learning for medicine have thus been highlights of my studies.
+									<b>Ph.D. in Bioinformatics</b> <br>
+									Currently I am pursuing a Ph.D at Cardiff University and the UKDRI under the supervision of <a href="https://ukdri.ac.uk/team/caleb-webber">Caleb Webber</a> and <a href="https://www.cardiff.ac.uk/people/view/1144889-sandor-cynthia">Cynthia Sandor</a>. My project aims at using Bayesian Modelling to stratify deeply phenotyped Parkinson's Disease patients.
+									The phenotypic heterogeneity displayed in PD renders early diagnosis and treatment difficult. We try to explain the clinical heterogeneity through continuous <a href="https://www.biorxiv.org/content/10.1101/655217v2">phenotypic axes</a> uncoverred through Bayesian multi-phenotype mixed models.
+									We try to uncover subtypes and subtype-specific progression and will use clinical data, imaging data, blood-based signatures and genetic data.
+								</p>
+								<p>
+									<b>M.Sc. in Cognitive Science</b> <br>
+									I focussed on methodology during my studies at the University of Tübingen. Hence, I took advanced courses on machine learning, statistics, and data science.
+									Highlights of my studies have been seminars on computational psychiatry and deep learning for medicine. These courses showed the impact of advanced methodology in the field of neurological diseases.
 								</p>
 								<p>
 									<b>B.Sc. in Cognitive Science</b> <br>
@@ -92,21 +96,22 @@
 									As I wanted to acquire a solid foundation in methodology, I put a special focus on mathematics and computer science.
 								</p>
 							</article>
+
 						<!-- Research-->
 							<article id="research" class="panel">
 								<header>
 									<h2>Research Projects</h2>
 								</header>
+
 								<div>
 									<p>
 										<h3 align="center">Master's Thesis at Neuronal Intelligence lab</h3><br>
-										I am currently writing my master's thesis at the Neuronal Intelligence lab under the supervision of Fabian Sinz.
-										My main thesis objective is to model the trajectories of cognitive and motor aging in healthy elderly.
+										I did my master's thesis at the Neuronal Intelligence lab under the supervision of Fabian Sinz.
+										My main thesis objective was to model the trajectories of cognitive and motor aging in healthy elderly.
 										By understanding the influence of risk factors from various domains (genetics, lifestyle, neuropathology, demographics) 
-										on the trajectories, an earlier diagnosis and a targeted treatment of pathological aging could be achieved.
-										In neurodegenerative diseases, the neurophysiological changes precede the clinical symptoms by several years, thus an early diagnosis and treatment is of high importance.
-										Longitudinal data of healthy elderly with and without prodromal markers including genetic, biological, and lifestyle data will be analyzed 
-										using baseline models, like generalized linear mixed effect models, and advanced Bayesian reduced rank modeling.<br><br>
+										on the trajectories, a healthy guideline could be established and an earlier diagnosis and a targeted treatment of pathological aging could be achieved.
+										Longitudinal data of healthy elderly with and without prodromal markers including genetic, biological, and lifestyle data was analyzed 
+										using advanced Bayesian reduced rank modelling.<br><br>
 										<a href="https://sinzlab.org/">Lab Website</a>
 									</p>
 								</div>
@@ -150,7 +155,7 @@
 				<!-- Footer -->
 					<div id="footer">
 						<ul class="copyright">
-							<li>&copy; 2020 Ann-Kathrin Schalkamp</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; 2021 Ann-Kathrin Schalkamp</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</div>
 
