Update contact info

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 									<h2 align="center">Contact Me</h2>
 								</header>
 								<p align="center">
-									<span class="icon solid fa-envelope-open"></span> <a href="mailto:ann-kathrin.schalkamp@student.uni-tuebingen.com">ann-kathrin.schalkamp@student.uni-tuebingen.com</a>
+									<span class="icon solid fa-envelope-open"></span> <a href="mailto:SchalkampA@cardiff.ac.uk">SchalkampA@cardiff.ac.uk</a>
 									<span class="icon brands fa-github"></span> <a href="https://github.com/aschalkamp">aschalkamp</a> <br>
 									<span class="icon brands fa-linkedin"></span> <a href="https://www.linkedin.com/in/ann-kathrin-schalkamp-3501b21a7/">Ann-Kathrin Schalkamp</a>
 									<span class="icon brands fa-twitter"></span> <a href="https://twitter.com/ASchalkamp">@ASchalkamp</a>
