--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
 					<nav id="nav">
 						<a href="#me" class="icon solid fa-home"><span>Home</span></a>
 						<a href="#about" class="icon fa-user"><span>About</span></a>
-						<a href="#academics" class="icon solid fa-university"><span>Academics</span></a>
-						<a href="#research" class="icon fa-folder"><span>Research</span></a>
+						<a href="#academics" class="icon solid fa-university"><span>Education</span></a>
+						<a href="#research" class="icon fa-folder"><span>Research Experience</span></a>
+						<a href="#public" class="icon fa-comments"><span>Public Engagement</span></a>
 						<a href="#contact" class="icon fa-envelope"><span>Contact</span></a>
 					</nav>
 
@@ -48,26 +49,16 @@
 								</header>
 								<p>
 									My research interest lies in the intersection of machine learning, medicine, and neuroscience. 
-									Body movement has fascinated me since I started dancing. Learning about the brain's motor control system has led to a general curiosity about the nervous system, its function, and pathological aberrations. 
-									The underlying cause of many neurological and psychiatric diseases is still unknown making targeted treatment difficult. To tackle this challenge, data-driven approaches are taken to revolutionize
-									the diagnosis and treatment of such diseases. Advanced methodology is required to make sense of the abundance of multi-modal data needed to investigate such complex diseases.
-									My goal is to contribute to this advancement through research in computational neuroscience/medicine. 
+									Given the advancements in technologies generating big data and methodological tools in the field of machine learning, medicine is transitioning into a data-driven era. This transition has the potential to revolutionise healthcare through improvements in early diagnosis, personalised treatment, and care. 
+									My goal is to contribute to this advancement through research in computational medicine/clinical informatics. 
 									<br><br>
-									<a href="documents/CV.pdf">Curriculum Vitae</a> (Updated January 2021)<br><br>
+									<a href="documents/CV.pdf">Curriculum Vitae</a> (Updated May 2023)<br><br>
 								</p>
 								<p>
-									<h3 align="center">Why computational neuroscience/medicine?</h3>
-									Currently, diagnosis and treatment selection, especially in psychiatry, rely on self-report and subjective decisions made by physicians. 
-								        Augmenting their decision process by means of machine learning could largely fasten and objectify this process. 
-									Visualizing medical data in a human comprehensible way or providing diagnoses and related uncertainties are possible augmentations. 
+									<h3 align="center">Why clinical informatics?</h3>
+									Currently, diagnosis and treatment selection often rely on self-report and subjective decisions made by physicians. 
+								    Augmenting their decision process by means of machine learning tools could largely fasten and objectify this process. 
 									An automatic, data-driven assessment of a patient’s health status can considerably alleviate the workload of physicians, enable early disease detection, and extract meaningful insights from the abundance of the medical data available.
-								</p>
-								<p>
-									<h3 align="center">Outside of Academia</h3>
-									<p style="float: left; padding-right: 50px"><img src="images/ballet.jpg" height="250px" width="200px" alt=""> <br><font size="-1">photo by Knut Reimann</font></p>
-									I have been dancing ballet since the age of 8. What started as a fun free time activity has become a huge part of my life.
-									Most of my free time I like to spend with dance; be it through taking dance classes, watching videos, or reading about the anatomy of dance.
-									Improving my technique and artistry, memorizing choreographies, and challenging myself physically and mentally are things I enjoy about ballet classes.
 								</p>
 
 							</article>
@@ -79,65 +70,68 @@
 								</header>
 								<p>
 									<b>Ph.D. in Bioinformatics</b> <br>
-									Currently I am pursuing a Ph.D at Cardiff University and the UKDRI under the supervision of <a href="https://ukdri.ac.uk/team/caleb-webber">Caleb Webber</a> and <a href="https://www.cardiff.ac.uk/people/view/1144889-sandor-cynthia">Cynthia Sandor</a>. My project aims at using Bayesian Modelling to stratify deeply phenotyped Parkinson's Disease patients.
-									The phenotypic heterogeneity displayed in PD renders early diagnosis and treatment difficult. We try to explain the clinical heterogeneity through continuous <a href="https://www.biorxiv.org/content/10.1101/655217v2">phenotypic axes</a> uncoverred through Bayesian multi-phenotype mixed models.
-									We try to uncover subtypes and subtype-specific progression and will use clinical data, imaging data, blood-based signatures and genetic data.
+									I am currently pursuing a Ph.D. at Cardiff University and the UK Dementia Research Institute, under the guidance of <a href="https://ukdri.ac.uk/team/caleb-webber">Caleb Webber</a> and <a href="https://www.cardiff.ac.uk/people/view/1144889-sandor-cynthia">Cynthia Sandor</a>. My research focuses on addressing various gaps in Parkinson's disease research, ranging from risk prediction to disease monitoring, through the application of data-driven methods on deeply phenotyped cohorts. I work with diverse data modalities, including digital sensors, electronic health records, genetics, brain imaging, blood biochemistry, and clinical data. My work involves applying various machine learning techniques, both supervised and unsupervised, to extract insights and improve understanding in this field.
 								</p>
 								<p>
 									<b>M.Sc. in Cognitive Science</b> <br>
-									I focussed on methodology during my studies at the University of Tübingen. Hence, I took advanced courses on machine learning, statistics, and data science.
-									Highlights of my studies have been seminars on computational psychiatry and deep learning for medicine. These courses showed the impact of advanced methodology in the field of neurological diseases.
+									During my studies at the University of Tübingen, I prioritized expanding my methodological skills. To achieve this, I enrolled in advanced courses on machine learning, statistics, and data science. Notable highlights of my studies were seminars on computational psychiatry and deep learning for medicine, which demonstrated the significant impact advanced methodologies can have in the realm of neurological diseases.
 								</p>
 								<p>
 									<b>B.Sc. in Cognitive Science</b> <br>
-									Throughout my studies at the University of Osnabrück I was introduced to the different aspects of cognitive science research.
-									Introductory courses in each field separately provided basic knowledge and skills of this interdisciplinary field.
-									I was especially interested in neuropsychology, neurobiology and neuroinformatics, and visited advanced courses on these subjects.
-									As I wanted to acquire a solid foundation in methodology, I put a special focus on mathematics and computer science.
+									Throughout my studies at the University of Osnabrück, I attended introductory courses covering various aspects of cognitive science, thereby gaining fundamental knowledge and skills in this interdisciplinary field. I developed a particular interest in neuropsychology, neurobiology, and neuroinformatics, and pursued advanced courses in these subjects. To establish a strong methodological foundation, I placed special emphasis on mathematics and computer science.
 								</p>
 							</article>
 
 						<!-- Research-->
 							<article id="research" class="panel">
 								<header>
-									<h2>Research Projects</h2>
+									<h2>Research Experience</h2>
 								</header>
-
+								<p>
+									For a complete list of my publications, see my <a href="https://scholar.google.com/citations?user=EvA7r8IAAAAJ&hl=de">google scholar profile</a>.
+								</p>
+								<div>
+									<p>
+										<h3 align="center">PhD at Cardiff University</h3><br>
+										 <ul>
+											  <li>Review article: <a href="https://doi.org/10.1242/dmm.049376">Deep phenotyping for precision medicine in Parkinson's disease</a> </li>
+											  <li>Preprint: <a href="https://doi.org/10.1101/2022.11.28.22282809">Wearable devices can identify Parkinson’s disease up to 7 years before clinical diagnosis</a></li>
+											</ul>
+									</p>
+								</div>
 								<div>
 									<p>
 										<h3 align="center">Master's Thesis at Neuronal Intelligence lab</h3><br>
-										I did my master's thesis at the Neuronal Intelligence lab under the supervision of Fabian Sinz.
-										My main thesis objective was to model the trajectories of cognitive and motor aging in healthy elderly.
-										By understanding the influence of risk factors from various domains (genetics, lifestyle, neuropathology, demographics) 
-										on the trajectories, a healthy guideline could be established and an earlier diagnosis and a targeted treatment of pathological aging could be achieved.
-										Longitudinal data of healthy elderly with and without prodromal markers including genetic, biological, and lifestyle data was analyzed 
-										using advanced Bayesian reduced rank modelling.<br><br>
-										<a href="https://sinzlab.org/">Lab Website</a>
+										During my time at the <a href="https://sinzlab.org/">Neural Intelligence Lab</a>, supervised by Fabian Sinz, I completed my master's thesis. The objective was to model the trajectories of cognitive and motor aging in healthy elderly individuals. By examining the influence of risk factors from various domains (genetics, lifestyle, tissue samples, demographics) on these trajectories, we aimed to establish general health guidelines and enable earlier diagnosis of pathological aging. I utilized advanced Bayesian reduced rank regression modeling to analyze longitudinal data from healthy elderly individuals with and without prodromal markers.
+										<a href="https://www.medrxiv.org/content/10.1101/2022.11.18.22282498v1">Preprint</a>
 									</p>
 								</div>
 								<div>
 									<p>
 										<h3 align="center">Internship at Neuroscience of Motivation, Action, and Desire Laboratory</h3><br>
-										During my laboratory internship at NeuroMADLAB, I analyzed the reliability of functional connectivity biomarkers for Major Depressive Disorder in a multi-site dataset.
-										Inconsistent findings of fMRI studies in the search of FC biomarkers highlight the need for large-scale, multi-site analyses which reveal a consistent picture of
-										the disease pathology by investigating sources of site heterogeneity as the scanner type or the scanning protocol.
-										In this mega-analysis, the functional connectivity aberrations within and between large-scale brain networks in MDD are explored using group-level analysis and supervised learning.
-										By using cross-site validation and providing a similarity measure of the group differences between sites, the problems with small sample size studies are highlighted.
-										Working with fMRI data and a dataset from multiple sources, I put my theoretical knowledge to practice, learned to handle messy data, and got insights into research practices.<br><br>
-										<a href="https://neuromadlab.com/de/">Lab Website</a>
+										As part of my laboratory internship at <a href="https://neuromadlab.com/de/">NeuroMADLAB</a>, I analysed the reliability of functional connectivity biomarkers for major depressive disorder using a multi-site dataset. This comprehensive analysis explored functional connectivity aberrations within and between large-scale brain networks in major depressive disorder through group-level analysis and individual-level analysis via supervised machine learning. By employing cross-site validation and assessing the similarity of group differences between sites, I shed light on the challenges of combining small sample size studies with different protocols.
+									
 									</p>
 								</div>
 								<div>
 									<p>
 										<h3 align="center">Bachelor's Thesis</h3><br>
-										I investigated whether EEG data acquired with the Traumschreiber, a portable high-tech sleep mask, is appropriate for traditional and single-trial analysis.
-										Within this project I designed, programmed, conducted, and analyzed an EEG study. The main result is that established standards in EEG research, like the reference placement, should
-										be revisited for BCI applications. Breaking with those standards can in fact result in new solutions for BCI challenges, as I showed by proposing a new method to increase the
-										sample size per participant without increasing the number of trials.
-										<br><br>
+										My bachelor's thesis investigated the suitability of electroencephalography (EEG) data acquired with the Traumschreiber, a portable high-tech sleep mask, for traditional EEG analysis and single-trial detection, as used in brain-computer interfaces (BCIs). This project involved designing, programming, conducting, and analyzing an EEG study. The main finding suggested the need to reconsider established EEG research standards, such as the placement of the reference electrode, for BCI applications. I proposed a novel approach of placing the reference electrode in the area where the signal is expected, which allowed for an increased sample size per participant without requiring additional trials.
 										<a href="documents/shortBScThesis.pdf">Short Summary of my Bachelor's Thesis</a><br><br>
 									</p>
 								</div>
+							</article>
+						<!-- Public -->
+							<article id="public" class="panel">
+								<header>
+									<h2 align="center">Public Engagement</h2>
+								</header>
+								<p>
+										 <ul>
+											  <li>Interview about Parkinson's early career researcher meeting: <a href="https://ukdri.ac.uk/news-and-events/world-parkinsons-day-meet-the-researchers-making-a-difference">Word Parkinson's Day: Meet the researchers making a difference</a> </li>
+											  <li>Parkinson's awareness day: presented my work to patients and caregivers, lead scientific roundtables on digital sensors</li>
+										</ul>
+								</p>
 							</article>
 						<!-- Contact -->
 							<article id="contact" class="panel">
@@ -155,7 +149,7 @@
 				<!-- Footer -->
 					<div id="footer">
 						<ul class="copyright">
-							<li>&copy; 2021 Ann-Kathrin Schalkamp</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; 2023 Ann-Kathrin Schalkamp</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</div>
 
