--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
 								</header>
 								<p>
 										 <ul>
-											  <li>Interview about Parkinson's early career researcher meeting: <a href="https://ukdri.ac.uk/news-and-events/world-parkinsons-day-meet-the-researchers-making-a-difference">Word Parkinson's Day: Meet the researchers making a difference</a> </li>
-											  <li>Parkinson's awareness day: presented my work to patients and caregivers, lead scientific roundtables on digital sensors</li>
+											  <li><a href="https://ukdri.ac.uk/news-and-events/world-parkinsons-day-meet-the-researchers-making-a-difference">World Parkinson's Day: Meet the researchers making a difference</a>: interview following the Parkinson's early career researcher meeting 2023 in Manchester</li>
+											  <li><a href="https://www.youtube.com/watch?v=vRJhCPJmx1Y">Parkinson's Research in Wales 2023</a>: presented my work to patients and caregivers, lead scientific roundtables on digital sensors</li>
 										</ul>
 								</p>
 							</article>
